# SPARK

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: basic_usage.py  example_data.csv  example_data.ris  example_schema.json
spark/: __init__.py  app.py  utils.py
tests/: __init__.py  test_example.py  test_utils.py
